# konkan-ai

./: .gitignore  README.md  TODO.md  a.html  b.html  c.html  d.html  e.html  f.html  g.html  gpt5pro.html  h.html  i.html  j.html  k.html  l.html  original_music.abc  pyproject.toml  ranj-hyper-landing.html  ranj-marketing.html  simple_music.abc  test_simple.abc
konkan/: __init__.py  _compat.py  actions.py  benchmark.py  cards.py  cards_BACKUP_33508.py  cards_LOCAL_33508.py  demand.py  determinize.py  encoding.py  evaluation.py  melds.py  rules.py  scoreboard.py  state.py  threats.py  tools.py
konkan/cli/: __init__.py  main.py  render.py  views.py
konkan/cli/textual/: __init__.py  app.py
konkan/ismcts/: __init__.py  node.py  opponents.py  policy.py  rollout.py  search.py
konkan_melds/: Cargo.toml  __init__.pyi
konkan_melds/src/: bitset.rs  cover.rs  deck.rs  lib.rs  runs_sets.rs
tests/: conftest.py  test_actions.py  test_benchmark.py  test_cli.py  test_demand.py  test_determinize.py  test_endgame.py  test_evaluation.py  test_ismcts_smoke.py  test_melds.py  test_node.py  test_opponents.py  test_policy.py  test_rollout.py  test_rules.py  test_sanity.py  test_sarf.py  test_scoreboard.py  test_search.py  test_search_logic.py  test_state_logic.py  test_threats.py  test_trash_eligibility.py
