[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "konkan"
version = "0.1.0"
description = "Konkan card game engine with IS-MCTS bots and CLI."
authors = [
  { name = "Konkan AI" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["konkan", "card-game", "mcts", "cli"]
dependencies = [
  "numpy>=1.26",
  "numba>=0.59",
  "typer[all]>=0.12",
  "rich>=13.7",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "maturin>=1.4"
]

[tool.hatch.build.targets.wheel]
packages = ["konkan"]

[tool.typer]
# Reserved for future Typer configuration.

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-select = ["B", "C4", "SIM", "I"]
ignore = ["B905"]
