[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "konkan"
version = "0.1.0"
description = "Konkan card game engine with IS-MCTS bots and CLI."
authors = [
  { name = "Konkan AI" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["konkan", "card-game", "mcts", "cli"]
dependencies = [
  "numpy>=2.34",
  "numba>=0.62.1",
  "typer[all]>=0.19.2",
  "rich>=14.2.0",
  "pydantic>=2.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "maturin>=1.9.6"
]

[tool.hatch.build.targets.wheel]
packages = ["konkan"]

[tool.typer]
# Reserved for future Typer configuration.

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-select = ["B", "C4", "SIM", "I"]
ignore = ["B905"]
