[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "konkan"
version = "0.1.0"
description = "Konkan card game engine with IS-MCTS bots and CLI."
authors = [
  { name = "Konkan AI" }
]
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["konkan", "card-game", "mcts", "cli"]
dependencies = [
  "numpy>=2.0,<2.4",
  "numba==0.63.0b1",
  "typer>=0.12.3",
  "rich>=14.2.0",
  "pydantic>=2.12.3",
  "textual>=6.3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "maturin>=1.9.6",
  "mypy>=1.18.2",
  "ruff>=0.14.1"
]

[project.scripts]
konkan-format = "konkan.tools:run_format"
konkan-lint = "konkan.tools:run_lint"
konkan-typecheck = "konkan.tools:run_typecheck"
konkan-test = "konkan.tools:run_test"
konkan-play = "konkan.cli.main:main"

[tool.setuptools.packages.find]
include = ["konkan", "konkan.*"]

[tool.typer]
# Reserved for future Typer configuration.

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "C4", "SIM", "I"]
ignore = ["B905"]

[tool.uv]
prerelease = "allow"

[tool.mypy]
python_version = "3.14"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
strict_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "konkan_melds",
  "konkan_melds.*",
  "numba",
]
ignore_missing_imports = true
